# mneme

./: .env.example  .gitignore  README.md  pyproject.toml
migrations/: 0001.create_sessions_and_messages.sql  0002.create_facts.sql  0003.create_preferences.sql  0004.add_facts_hnsw_index.sql  0005.add_messages_embedding.sql  0006.add_pref_task_summary_feedback.sql  0007.add_pref_task_type_approach.sql  0008.create_jobs.sql  0009.create_hooks.sql
mneme/: __init__.py  app.py  config.py  embeddings.py  models.py  store.py
tests/: test_routes.py
